[gd_scene load_steps=13 format=3 uid="uid://bkaonbjywuo3p"]

[ext_resource type="PackedScene" uid="uid://gacxqlgbd4y1" path="res://Scenes/parent.tscn" id="1_4jaii"]
[ext_resource type="Texture2D" uid="uid://dp4nnlerwspva" path="res://Assets/Book Scene/book_background.png" id="2_adnxt"]
[ext_resource type="Script" path="res://Scenes/book_scene.gd" id="2_ygxg4"]
[ext_resource type="Texture2D" uid="uid://c03juac5o16re" path="res://Assets/charm_UI_clean_render_drawer_carpet.png" id="3_368ep"]
[ext_resource type="PackedScene" uid="uid://dcwlk7kdxw76u" path="res://Scenes/Objects/book_left_button.tscn" id="3_hqkpe"]
[ext_resource type="PackedScene" uid="uid://dmhu0a5b68u3" path="res://Scenes/Objects/book_right_button.tscn" id="4_omg0a"]
[ext_resource type="Texture2D" uid="uid://bby8436ceytse" path="res://Assets/Book Scene/book_page_01.png" id="5_4evc7"]
[ext_resource type="PackedScene" uid="uid://djq1l5eihiqfu" path="res://Scenes/Objects/book_x_button.tscn" id="5_i12ui"]
[ext_resource type="Texture2D" uid="uid://bcajm1vfiygap" path="res://Assets/Book Scene/book_page_02.png" id="6_4okuo"]
[ext_resource type="Texture2D" uid="uid://dwij6xfwbkc5s" path="res://Assets/Book Scene/book_page_03.png" id="7_jojro"]
[ext_resource type="Texture2D" uid="uid://kxwennrxipee" path="res://Assets/Book Scene/book_page_04.png" id="8_i7dq2"]
[ext_resource type="AudioStream" uid="uid://tbjgchph5t1r" path="res://Assets/Audio/nc297789_page.wav" id="12_wv6in"]

[node name="BookScene" instance=ExtResource("1_4jaii")]
script = ExtResource("2_ygxg4")

[node name="BackgroundCarpet" type="Sprite2D" parent="." index="0"]
position = Vector2(1023, -6)
rotation = -3.14159
texture = ExtResource("3_368ep")

[node name="Background" type="Sprite2D" parent="." index="1"]
texture = ExtResource("2_adnxt")

[node name="Pages" type="Node2D" parent="." index="2"]

[node name="p1" type="Sprite2D" parent="Pages" index="0"]
texture = ExtResource("5_4evc7")

[node name="p2" type="Sprite2D" parent="Pages" index="1"]
visible = false
texture = ExtResource("6_4okuo")

[node name="p3" type="Sprite2D" parent="Pages" index="2"]
visible = false
texture = ExtResource("7_jojro")

[node name="p4" type="Sprite2D" parent="Pages" index="3"]
visible = false
texture = ExtResource("8_i7dq2")

[node name="Buttons" type="Node2D" parent="." index="3"]
visible = false
z_index = 3

[node name="BookLeftButton" parent="Buttons" index="0" instance=ExtResource("3_hqkpe")]
position = Vector2(-860, 200)

[node name="BookRightButton" parent="Buttons" index="1" instance=ExtResource("4_omg0a")]
position = Vector2(850, 200)

[node name="BookXButton" parent="Buttons" index="2" instance=ExtResource("5_i12ui")]
position = Vector2(-860, 370)

[node name="page" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource("12_wv6in")

[connection signal="input_event" from="Buttons/BookLeftButton" to="." method="_on_book_left_button_input_event"]
[connection signal="input_event" from="Buttons/BookRightButton" to="." method="_on_book_right_button_input_event"]
[connection signal="input_event" from="Buttons/BookXButton" to="." method="_on_book_x_button_input_event"]
